[tool.poetry]
name = "fivepyfive"
version = "0.1.0"
description = "A small and annoying puzzle for the terminal"
authors = ["Dave Pearson <davep@davep.org>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = {version = "0.2.0b5", extras = ["dev"]}


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
